<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TxtV_Main_UseCount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Btn_Sensor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c2"
            android:onClick="Btn_SensorClickHandler"
            android:text="@string/Btn_Sensor" />

        <Button
            android:id="@+id/Btn_DialogMain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c2"
            android:onClick="Btn_DialogMainClickHandler"
            android:text="@string/Btn_Dialog" />

        <Button
            android:id="@+id/BTN_VideoPause"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c1"
            android:onClick="Btn_SQLiteClickHandler"
            android:text="@string/Btn_DB" />

        <Button
            android:id="@+id/Btn_Book"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_BookClickHandler"
            android:text="@string/Btn_Book" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/BTN_VideoStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c1"
            android:onClick="Btn_CameraClickHandler"
            android:text="@string/Btn_Camera" />

        <Button
            android:id="@+id/Btn_Picture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_PictureClickHandler"
            android:text="@string/Btn_Picture" />

        <Button
            android:id="@+id/Btn_Alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_AlarmClickHandler"
            android:text="@string/Btn_Timer" />

        <Button
            android:id="@+id/BTN_GOOGLE"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c1"
            android:onClick="Btn_GoogleMapHandler"
            android:text="@string/Btn_Map" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/BTN_Video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_VideoClickHandler"
            android:text="@string/Btn_Video" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_NetHandler"
            android:text="网络" />

        <Button
            android:id="@+id/BTN_Speech"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_SpeechHandler"
            android:text="朗读" />

        <Button
            android:id="@+id/BTN_Mp3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_Mp3ClickHandler"
            android:text="音频" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Btn_ShowIntent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:text="显式INTENT"
            android:textSize="10dp" />

        <Button
            android:id="@+id/Btn_HideIntent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:text="隐式INTENT"
            android:textSize="10dp" />

        <Button
            android:id="@+id/Btn_SysConfig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_SysConfigClickHandler"
            android:text="系统参数" />

        <Button
            android:id="@+id/Btn_Telephone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c2"
            android:onClick="Btn_TelephoneHandler"
            android:text="@string/Btn_GSM" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Btn_AudioParse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/c2"
            android:onClick="Btn_AudioParseClickHandler"
            android:text="音频解析" />

        <Button
            android:id="@+id/Btn_Test1_21"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_ParaSaveHandler"
            android:text="@string/Btn_ParaSave" />

        <Button
            android:id="@+id/Btn_Test1_12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c2"
            android:onClick="Btn_GamePlaneHandler"
            android:text="@string/Btn_Game" />

        <Button
            android:id="@+id/Btn_CalPrime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_CalPrimeHandler"
            android:text="@string/Btn_Info" />

        <Button
            android:id="@+id/Btn_Async"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/c6"
            android:onClick="Btn_AsyncHandler"
            android:text="@string/Btn_DownLoad" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp">

        <Button
            android:id="@+id/btn_main_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_BluetoothHandler"
            android:text="@string/Btn_Bluetooth" />

        <Button
            android:id="@+id/btn_main_bluetooth1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth1Handler"
            android:text="BGM" />

        <Button
            android:id="@+id/btn_main_bluetooth2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth2Handler"
            android:text="BPM" />

        <Button
            android:id="@+id/btn_main_bluetooth3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth3Handler"
            android:text="CGMS" />

        <Button
            android:id="@+id/btn_main_bluetooth4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth4Handler"
            android:text="CSC" />

        <Button
            android:id="@+id/btn_main_bluetooth5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth5Handler"
            android:text="DFU" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp">

        <Button
            android:id="@+id/btn_main_bluetooth6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth6Handler"
            android:text="HRM" />

        <Button
            android:id="@+id/btn_main_bluetooth7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth7Handler"
            android:text="HTM" />

        <Button
            android:id="@+id/btn_main_bluetooth8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth8Handler"
            android:text="PROXIMITY" />

        <Button
            android:id="@+id/btn_main_bluetooth9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth9Handler"
            android:text="RSC" />

        <Button
            android:id="@+id/btn_main_bluetooth10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth10Handler"
            android:text="TEMPLATE" />

        <Button
            android:id="@+id/btn_main_bluetooth11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="Btn_Bluetooth11Handler"
            android:text="UART" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/textResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:focusable="false"
            android:gravity="bottom" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="NULL"
            android:onClick="imageButton1ClickHandler"
            android:scaleType="fitCenter"
            android:src="@drawable/xsl_bmp" />

        <ImageView
            android:id="@+id/imageView_Arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButton1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/imageButton1"
            android:src="@drawable/arrow1" />

    </RelativeLayout>

</LinearLayout>

